# gosh-rust

./: Cargo.toml  README.md  history.txt
src/: main.rs
